# bosphorus

./: .clang-format  .gitignore  .gitmodules  .vimsettings.vim  CMakeLists.txt  Dockerfile  LICENSE  PAPER.txt  README.md  bosphorusConfig.cmake.in  requirements.test.txt  setup.sh  test.anf  test.cnf
.github/workflows/: build.yml  cmake-single-platform.yml
cmake/: FindBRiAl.cmake  Findm4ri.cmake
espresso/: .directory  CMakeLists.txt  Makefile.am  espresso.1  espresso.5  help
espresso/main/: CMakeLists.txt  Makefile.am  cvrin.c  cvrin_original.c  cvrout.c  espresso.h  exact.c  hack.c  main.c  main_original.c  pair.c  unate.c  verify.c
espresso/mincov/: CMakeLists.txt  Makefile.am  mincov.c  mincov_int.h  part.c
espresso/sparse/: CMakeLists.txt  Makefile.am  cols.c  matrix.c  rows.c  sparse.doc  sparse.tex  sparse_int.h
espresso/util/: CMakeLists.txt  Makefile.am  cpu_stats.c  cpu_time.c  getopt.c  pathsearch.c  pipefork.c  prtime.c  restart.c  safe_mem.c  safe_mem.c~  state.c  strsav.c  stub.c  texpand.c  tmpfile.c  util-stdlib.h  util.h
scripts/: build_norm.sh  build_static.sh  clean_build.sh  count_anf_solutions.py  fuzz.sh
src/: CMakeLists.txt  GitSHA1.cpp.in  GitSHA1.h  GitSHA1.hpp  anf.cpp  anf.h  anf.hpp  anfcnfutils.cpp  anfcnfutils.hpp  anfutils.cpp  anfutils.hpp  bosphincludes.hpp  bosphorus.cpp  bosphorus.h  bosphorus.hpp  clauses.h  clauses.hpp  cnf.cpp  cnf.h  cnf.hpp  configdata.h  configdata.hpp  dimacscache.cpp  dimacscache.h  dimacscache.hpp  elimlin.cpp  elimlin.hpp  evaluator.h  evaluator.hpp  extendedlinearization.cpp  extendedlinearization.hpp  gaussjordan.h  gaussjordan.hpp  karnaugh.cpp  karnaugh.h  karnaugh.hpp  library.cpp  library.h  main.cpp  main_simple.cpp  (+19 more)
tests/: anf_prop.anf  anf_prop.anf.out  el.anf  el.anf.out  fixed.anf  fixed.anf.out  gj.anf  gj.anf.out  lit.cfg  not_eaten.anf  not_eaten.anf.out  not_eaten2.anf  not_eaten2.anf.out  parse_bracket1.anf  parse_bracket1.anf.out  parse_bracket2.anf  parse_bracket3.anf  substitute_carefully.anf  substitute_carefully.anf.out  ternary_factorized.anf  xl.anf  xl.anf.out
tests/anf-files/: CMakeLists.txt  anf_prop.anf  anf_prop.cnf  bad_char.anf  bad_char.anf.resolve  el.anf  fixed.anf  gj,cnf  gj.anf  gj.anf.resolve  lit.cfg  lit.site.cfg.in  not_eaten.anf  not_eaten.cnf  not_eaten2.anf  parse_bracket1.anf  parse_bracket2.anf  parse_bracket3.anf  substitute_carefully.anf  substitute_carefully.anf.resolve  substitute_carefully.cnf  ternary_factorized.anf  ternary_factorized.anf.resolve  test.anf  testcmp.anf  upper_lower.anf  upper_lower.cnf  xl.anf
utils/: anf_gen.py  build_norm.sh  build_nosat.sh  check_cnf.py  check_solution.py  cnffuzz.py  fuzz.sh  map_solution.py
