noinst_LTLIBRARIES = libmain.la

AM_CFLAGS = $(all_includes) -I$(srcdir) \
	      -I$(srcdir)/../main -I$(srcdir)/../mincov \
	      -I$(srcdir)/../util -I$(srcdir)/../sparse

libmain_la_SOURCES = \
cofactor.c  cubestr.c         cvrm.c     essen.c   gasp.c     irred.c          map.c   primes.c  setc.c      sparse.c compl.c     cvrin.c           cvrmisc.c  equiv.c            exact.c   globals.c  main.c           opo.c   reduce.c  sharp.c     unate.c contain.c   cvrout.c   espresso.c         expand.c  pair.c  set.c     sminterf.c  verify.c


#noinst_LTLIBRARIES = libmainoriginal.la
#libmainoriginal_la_SOURCES= \
#cofactor.c  cubestr.c         cvrm.c     cvrout_original.c  essen.c   gasp.c     irred.c          map.c   primes.c  setc.c      sparse.c compl.c     cvrmisc.c  equiv.c            exact.c   globals.c  opo.c   reduce.c  sharp.c     unate.c contain.c   cvrin_original.c   espresso.c         expand.c  hack.c     main_original.c  pair.c  set.c     sminterf.c  verify.c

