noinst_LTLIBRARIES = libutil.la

AM_CFLAGS = $(all_includes) -I$(srcdir) \
	      -I$(srcdir)/../main -I$(srcdir)/../mincov \
	      -I$(srcdir)/../util -I$(srcdir)/../sparse

libutil_la_SOURCES = \
	cpu_stats.c  getopt.c      pipefork.c  ptime.c    safe_mem.c   state.c   stub.c     tmpfile.c cpu_time.c   pathsearch.c  prtime.c    restart.c  saveimage.c  strsav.c  texpand.c


